샘플작업중

--- a/src/codinglist.html
+++ b/src/codinglist.html
@@ -94,14 +94,14 @@
 						<td class="no"></td>
 						<td class="link"><a href="popup.html" target="_blank">팝업</a></td>
 						<td class="td_url"></td>
-						<td class="work ing"></td>
+						<td class="work end"></td>
 						<td class="bgo"></td>
 					</tr>
 					<tr>
 						<td class="no"></td>
 						<td class="link"><a href="modal.html" target="_blank">모달 팝업</a></td>
 						<td class="td_url"></td>
-						<td class="work ing"></td>
+						<td class="work end"></td>
 						<td class="bgo"></td>
 					</tr>
 					<tr class="depth">
