--- a/src/popup.html
+++ b/src/popup.html
@@ -19,7 +19,47 @@
 					내용<br>
 					내용<br>
 					내용<br>
+					내용<br>
+					내용<br>
+					내용<br>
+					내용<br>
+					내용<br>
+					내용<br>
+					내용<br>
+					내용<br>
+					내용<br>
+					내용<br>
+					내용<br>
+					내용<br>
+					내용<br>
+					내용<br>
+					내용<br>
+					내용<br>
+					내용<br>
+					내용<br>
+					내용<br>
+					내용<br>
+					내용<br>
+					내용<br>
+					내용<br>
+					내용<br>
+					내용<br>
+					내용<br>
+					내용<br>
+					내용<br>
+					내용<br>
+					내용<br>
+					내용<br>
+					내용<br>
+					내용<br>
+					내용<br>
+					내용<br>
 					내용
+				</div>
+				<div class="popup_btn_row btn_bottom_wrap">
+					<!-- close_trigger 있을시 닫기 -->
+					<a href="#" class="btn_submit_box primary close_trigger"><span class="btn_submit_box_text">확인</span></a>
+					<!-- <a href="#" class="btn_submit_box close_trigger"><span class="btn_submit_box_text">취소</span></a> -->
 				</div>
 				<a href="javascript:;" class="btn_popup_close"><span class="hdtext">팝업 닫기</span></a>
 			</div>
