--- a/src/codinglist.html
+++ b/src/codinglist.html
@@ -87,7 +87,7 @@
 						<td class="no"></td>
 						<td class="link"><a href="layout.html" target="_blank">레이아웃</a></td>
 						<td class="td_url"></td>
-						<td class="work ing"></td>
+						<td class="work end"></td>
 						<td class="bgo"></td>
 					</tr>
 					<tr>
