--- a/src/fc_history.html
+++ b/src/fc_history.html
@@ -1,20 +1,71 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
+ @@include('./include/head.html')
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+ <body class="front_body">
+    <div class="page_wrap">
+        @@include('./include/header2.html')
+		<section class="middle_section">
+			내용이 들어갑니다.
+		</section>
+		@@include('./include/footer.html')
+	</div>
+    <script>menuRock("[name='gnb_history']");</script>
 
-<body>
     <!-- popup -->
-    <div class="popup_wrap" id="mainPopup">
+    <div class="popup_wrap" id="deliveryPopup">
         <div class="bg_dim"></div>
         <div class="popup_item">
+            <div class="popup_title_row">
+                <h3 class="popup_title">배송정보</h3>
+            </div>
             <div class="popup_contents_row">
-                팝업
+                내용<br>
+                내용<br>
+                내용<br>
+                내용<br>
+                내용<br>
+                내용<br>
+                내용<br>
+                내용<br>
+                내용<br>
+                내용<br>
+                내용<br>
+                내용<br>
+                내용<br>
+                내용<br>
+                내용<br>
+                내용<br>
+                내용<br>
+                내용<br>
+                내용<br>
+                내용<br>
+                내용<br>
+                내용<br>
+                내용<br>
+                내용<br>
+                내용<br>
+                내용<br>
+                내용<br>
+                내용<br>
+                내용<br>
+                내용<br>
+                내용<br>
+                내용<br>
+                내용<br>
+                내용<br>
+                내용<br>
+                내용<br>
+                내용<br>
+                내용<br>
+                내용<br>
+                내용<br>
+                내용
+            </div>
+            <div class="popup_btn_row btn_bottom_wrap">
+                <!-- close_trigger 있을시 닫기 -->
+                <a href="#" class="btn_submit_box primary close_trigger"><span class="btn_submit_box_text">확인</span></a>
+                <!-- <a href="#" class="btn_submit_box close_trigger"><span class="btn_submit_box_text">취소</span></a> -->
             </div>
             <a href="javascript:;" class="btn_popup_close"><span class="hdtext">팝업 닫기</span></a>
         </div>
