--- a/src/history.html
+++ b/src/history.html
@@ -1,15 +1,62 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
+ @@include('./include/head.html')
+<body class="front_body">
+	<div class="page_wrap">
+        @@include('./include/header.html')
+		<section class="middle_section">
+			<div class="sv_zone img_history">
+				<div class="sv_inner">
+					<h2 class="sv_title">신청내역</h2>
+					<div class="sv_copy_group">
+						<p class="sv_copy">
+							자세한 문의는 담당 FC 또는 <br>SO ON 우수고객 전담센터(02.000.0000)으로 문의하시기 바랍니다.						
+						</p>
+					</div>
+				</div>
+			</div>
+			<div class="sc_zone">
+				내용이 들어갑니다.
+			</div>
+		</section>
+		@@include('./include/footer.html')
+	</div>
+    <script>menuRock("[name='gnb_history']");</script>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            
+            // 퍼블 확인용
+            let url = window.location.href.split('?')[1];
+            let url_2 = url !== undefined ? url.split('#')[0] : null;
 
-<body>
+            if(url_2 === "alert01"){
+                designModal({
+                    message : "신청을 취소하시겠습니까?",
+                    modaltype : 'confirm',
+                    okText : '예',
+                    cancelText : '아니오',
+                    okcallback(){
+                        console.log('okcallback');
+                    },
+                    cancelcallback(){
+                        console.log('cancelcallback');
+                    }
+                });
+            }else if(url_2 === "alert02"){
+                designModal({
+                    message : "신청이 취소되었습니다.",
+                    okcallback(){
+                        console.log('okcallback');
+                    },
+                    cancelcallback(){
+                        console.log('cancelcallback');
+                    }
+                });
+            }
+        });
 
+    </script>
 </body>
 
 </html>
