--- a/src/product_detail.html
+++ b/src/product_detail.html
@@ -77,47 +77,62 @@
                 <h3 class="popup_title">신청완료</h3>
             </div>
             <div class="popup_contents_row">
-                내용<br>
-                내용<br>
-                내용<br>
-                내용<br>
-                내용<br>
-                내용<br>
-                내용<br>
-                내용<br>
-                내용<br>
-                내용<br>
-                내용<br>
-                내용<br>
-                내용<br>
-                내용<br>
-                내용<br>
-                내용<br>
-                내용<br>
-                내용<br>
-                내용<br>
-                내용<br>
-                내용<br>
-                내용<br>
-                내용<br>
-                내용<br>
-                내용<br>
-                내용<br>
-                내용<br>
-                내용<br>
-                내용<br>
-                내용<br>
-                내용<br>
-                내용<br>
-                내용<br>
-                내용<br>
-                내용<br>
-                내용<br>
-                내용<br>
-                내용<br>
-                내용<br>
-                내용<br>
-                내용
+                <div class="pc_message_row emp"><p class="pc_message">“신청이 정상적으로 완료되었습니다.”</p></div>
+                <div class="arch_block_wrap">
+                    <div class="arch_block">
+                        <div class="arch_title_row"><h4 class="arch_title"><span class="arch_title_text">신청정보 확인</span></h4></div>
+                        <div class="arch_contents">
+                            <div class="data_table_wrap">
+                                <table class="data_table">
+                                    <tr>
+                                        <th><span class="data_thtext">신청일자</span></th>
+                                        <td><span class="data_tdtext">2024.03.30 00:00:00</span></td>
+                                    </tr>
+                                    <tr>
+                                        <th><span class="data_thtext">상품명</span></th>
+                                        <td><span class="data_tdtext">명품 한우세트 ‘암소NO.09’ & <br>발뮤다 플레이트 프로</span></td>
+                                    </tr>
+                                    <tr>
+                                        <th><span class="data_thtext">신청자</span></th>
+                                        <td><span class="data_tdtext">김*한(nh123456789)</span></td>
+                                    </tr>
+                                    <tr>
+                                        <th><span class="data_thtext">지점명</span></th>
+                                        <td><span class="data_tdtext">강남 지점</span></td>
+                                    </tr>
+                                    <tr>
+                                        <th><span class="data_thtext">배송정보</span></th>
+                                        <td>
+                                            <span class="data_tdtext">
+                                                김*한 010-****-5678<br>
+                                                06673 서울 서초구 서초대로 88<br> 
+                                                5층 어질리티코리아
+                                            </span>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th><span class="data_thtext">배송시<br class="respon_not">요청사항</span></th>
+                                        <td><span class="data_tdtext"></span></td>
+                                    </tr>
+                                </table>
+                            </div>
+                            <ul class="clause_list">
+                                <li>
+                                    <div class="indent_item">
+                                        <span class="indent_bullet">*</span>
+                                        <div class="indent_liquid">신청취소는 신청일 다음날까지만 가능합니다.</div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="indent_item">
+                                        <span class="indent_bullet">*</span>
+                                        <div class="indent_liquid">기프트 및 안내 바우처 배송기간은 최대 10일까지 소요될 수 있습니다.</div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="popup_btn_row btn_bottom_wrap">
                 <!-- close_trigger 있을시 닫기 -->
