--- a/src/codinglist.html
+++ b/src/codinglist.html
@@ -132,7 +132,7 @@
 						<td class="no"></td>
 						<td class="link"><a href="main.html?popup" target="_blank">메인 - 고객정보</a></td>
 						<td class="td_url"></td>
-						<td class="work ing"></td>
+						<td class="work end"></td>
 						<td class="bgo"></td>
 					</tr>
 					<tr>
@@ -174,7 +174,7 @@
 						<td class="no"></td>
 						<td class="link"><a href="product_detail.html?popup_end" target="_blank">상세페이지 - 신청완료</a></td>
 						<td class="td_url"></td>
-						<td class="work ing"></td>
+						<td class="work end"></td>
 						<td class="bgo"></td>
 					</tr>
 					<tr>
@@ -227,7 +227,7 @@
 						<td class="no"></td>
 						<td class="link"><a href="fc_history.html?popup" target="_blank">신청내역 - 배송정보</a></td>
 						<td class="td_url"></td>
-						<td class="work ing"></td>
+						<td class="work end"></td>
 						<td class="bgo"></td>
 					</tr>
 				</tbody>
