페이지 작업중

--- a/src/codinglist.html
+++ b/src/codinglist.html
@@ -111,21 +111,21 @@
 						<td class="no"></td>
 						<td class="link"><a href="login.html" target="_blank">로그인</a></td>
 						<td class="td_url"></td>
-						<td class="work ing"></td>
+						<td class="work end"></td>
 						<td class="bgo"></td>
 					</tr>
 					<tr>
 						<td class="no"></td>
 						<td class="link"><a href="login.html?popup" target="_blank">로그인 - 로그인 정보확인</a></td>
 						<td class="td_url"></td>
-						<td class="work ing"></td>
+						<td class="work end"></td>
 						<td class="bgo"></td>
 					</tr>
 					<tr>
 						<td class="no"></td>
 						<td class="link"><a href="main.html" target="_blank">메인</a></td>
 						<td class="td_url"></td>
-						<td class="work ing"></td>
+						<td class="work end"></td>
 						<td class="bgo"></td>
 					</tr>
 					<tr>
@@ -139,14 +139,14 @@
 						<td class="no"></td>
 						<td class="link"><a href="service.html" target="_blank">서비스안내</a></td>
 						<td class="td_url"></td>
-						<td class="work ing"></td>
+						<td class="work end"></td>
 						<td class="bgo"></td>
 					</tr>
 					<tr>
 						<td class="no"></td>
 						<td class="link"><a href="product_list.html" target="_blank">상품리스트</a></td>
 						<td class="td_url"></td>
-						<td class="work ing"></td>
+						<td class="work end"></td>
 						<td class="bgo"></td>
 					</tr>
 					<tr>
@@ -202,7 +202,7 @@
 						<td class="no"></td>
 						<td class="link"><a href="notice.html" target="_blank">공지사항</a></td>
 						<td class="td_url"></td>
-						<td class="work ing"></td>
+						<td class="work end"></td>
 						<td class="bgo"></td>
 					</tr>
 					
@@ -213,7 +213,7 @@
 						<td class="no"></td>
 						<td class="link"><a href="fc_product_list.html" target="_blank">상품리스트</a></td>
 						<td class="td_url"></td>
-						<td class="work ing"></td>
+						<td class="work end"></td>
 						<td class="bgo"></td>
 					</tr>
 					<tr>
