--- a/src/login.html
+++ b/src/login.html
@@ -16,13 +16,13 @@
                                     <li>
                                         <div class="finput_item">
                                             <i class="ico shape_id"></i>
-                                            <input type="text" class="finput">
+                                            <input type="text" class="finput" placeholder="ID">
                                         </div>
                                     </li>
                                     <li>
                                         <div class="finput_item">
                                             <i class="ico shape_pw"></i>
-                                            <input type="password" class="finput">
+                                            <input type="password" class="finput" placeholder="PW">
                                             <i class="ico shape_key"></i>
                                         </div>
                                     </li>
@@ -57,13 +57,19 @@
             <div class="bg_dim"></div>
             <div class="popup_item single_type">
                 <div class="popup_contents_row">
-                    <div class="popup_cont_block">
-                        <p class="popup_cont_message">아이디와 비밀번호를 잊어버리셨을 경우 <br>고객 센터로 연락해주시기 바랍니다.</p>
+                    <div class="popup_cont_block top_pos">
+                        <p class="popup_cont_message">
+                            아이디와 비밀번호를 잊어버리셨을 경우 <br>
+                            SOL ON 우수고객 서비스 전담센터로 <br>
+                            연락해주시기 바랍니다.
+                        </p>
                     </div>
-                    <div class="popup_cont_block">
+                    <div class="popup_cont_block type2">
                         <p class="popup_cont_emp">
-                            VIP 멤버십 고객센터 : 02.517.7813<br>
-                            운영시간 : 09:00 ~ 18:00 <span class="cont_emp_sub">(주말 및 공휴일 제외)</span>
+                            SOL ON 우수고객 서비스 전담센터 <strong>02.517.7813</strong><br>
+                        </p>
+                        <p class="popup_cont_sub">
+                            <span class="pcont_sub_text">이용시간 : 09:00-17:30</span>(점심시간 12:00-13:00,주말, 공휴일 제외)
                         </p>
                     </div>
                 </div>
