--- a/src/main.html
+++ b/src/main.html
@@ -19,14 +19,30 @@
                 </div>
             </div>
             <div class="mc_contents">
-                메인 컨텐츠
+                <ul class="mc_item_list">
+                    <li>
+                        <a href="#" class="mc_item">
+                            <img src="./assets/images/bg_main_banner.jpg" alt="">
+                            <div class="mc_item_textcontent">
+                                <div class="top_textrow">
+                                    <p class="mc_banner_primary">SOL ON 우수고객 서비스</p>
+                                    <p class="mc_banner_sub">프리미엄 기프트(택1)</p>
+                                </div>
+                                <div class="bottom_textrow">
+                                    <span class="btn_mc_item">바로가기</span>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+                <div class="mc_gap"></div>
             </div>
         </section>
         @@include('./include/footer.html')
 
 
         <!-- popup -->
-        <div class="popup_wrap" id="mainPopup">
+        <div class="popup_wrap" id="customerPopup">
             <div class="bg_dim"></div>
 			<div class="popup_item">
 				<div class="popup_title_row">
@@ -72,8 +88,8 @@
         <script>
             document.addEventListener("DOMContentLoaded", function () {
                 // 인스턴스 선언
-                let mainPopup = new DesignPopup({
-                    selector: "#mainPopup",
+                let customerPopup = new DesignPopup({
+                    selector: "#customerPopup",
                     beforeCallback() {
 
                     },
@@ -88,15 +104,22 @@
                 let url_2 = url !== undefined ? url.split('#')[0] : null;
 
                 if (url_2 === "popup") {
-                    mainPopup.popupShow(); // show
+                    customerPopup.popupShow(); // show
                 }
 
-                /* document.querySelector("#btn_idpw_call").addEventListener("click", (e) => {
-                    e.preventDefault();
-                    mainPopup.popupShow(); 
-                }); */
+                
+                let btn_customer_data = document.querySelectorAll("[name='btn_customer_data']");
+                if(!!btn_customer_data){
+                    btn_customer_data.forEach((item)=>{
+                        item.addEventListener("click",(e)=>{
+                            customerPopup.popupShow(); 
+                        })
+                    });
+                }
             });
-
+            window.addEventListener("load",()=>{
+                mainContentsGap();
+            });
         </script>
     </div>
 </body>
