--- a/src/service.html
+++ b/src/service.html
@@ -18,7 +18,130 @@
 				</div>
 			</div>
 			<div class="sc_zone">
-				내용이 들어갑니다.
+				<div class="sc_guide_one_brick">
+					<p class="sc_guide_one_title">SOL ON 등급</p>
+					<div class="sc_guide_two_brick_wrap">
+						<div class="sc_guide_two_brick">
+							<p class="scguide_two_title">신한라이프 SOL ON 등급 선정 기준</p>
+							<p class="scguide_two_copy">신한라이프 SOL ON 등급은 유지계약건수, 보험료, 기납입금액 등의 거래실적을 종합적으로 점수화하여 선정합니다.</p>
+							<div class="scguide_two_cont">
+								<div class="guide_data_table_wrap">
+									<table class="guide_data_table">
+										<thead>
+											<tr>
+												<th><span class="guide_thtext">등급</span></th>
+												<th><span class="guide_thtext">필수조건</span></th>
+												<th><span class="guide_thtext">최소조건</span></th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr>
+												<td class="emp"><span class="guide_tdtext"><strong>SS</strong>등급<strong>( Super Special )</strong></span></td>
+												<td><span class="guide_tdtext"><strong>5,000</strong> 점</span></td>
+												<td><span class="guide_tdtext">월납보험료 1천만 이상</span></td>
+											</tr>
+											<tr>
+												<td class="emp"><span class="guide_tdtext"><strong>S</strong>등급<strong>( Special )</strong></span></td>
+												<td><span class="guide_tdtext"><strong>1,500</strong> 점</span></td>
+												<td><span class="guide_tdtext">월납보험료 3백만 이상</span></td>
+											</tr>
+										</tbody>
+									</table>
+								</div>
+								<ul class="guide_indent_list">
+									<li>
+										<div class="guide_indent_item">
+											<span class="guide_indent_bullet">*</span>
+											<div class="guide_indent_liquid">필수 조건을 만족 하더라도 최소 조건을 만족하지 못하면 SS/S등급 부여 불가</div>
+										</div>
+									</li>
+								</ul>
+							</div>
+						</div>
+						<div class="sc_guide_two_brick">
+							<p class="scguide_two_title">신한라이프 SOL ON 선정 항목별 배점 기준</p>
+							<div class="scguide_two_cont">
+								<div class="guide_data_table_wrap">
+									<table class="guide_data_table">
+										<thead>
+											<tr>
+												<th colspan="2"><span class="guide_thtext">구분</span></th>
+												<th><span class="guide_thtext">배점</span></th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr>
+												<td class="emp"><span class="guide_tdtext"><strong>건수</strong></span></td>
+												<td class="emp"><span class="guide_tdtext"><strong>1</strong>건당</span></td>
+												<td><span class="guide_tdtext"><strong>50</strong></span></td>
+											</tr>
+											<tr>
+												<td class="emp"><span class="guide_tdtext"><strong>월납보험료</strong></span></td>
+												<td class="emp"><span class="guide_tdtext"><strong>50</strong>만원당</span></td>
+												<td><span class="guide_tdtext"><strong>150</strong></span></td>
+											</tr>
+											<tr>
+												<td class="emp"><span class="guide_tdtext"><strong>기납일보험료</strong></span></td>
+												<td class="emp"><span class="guide_tdtext"><strong>50</strong>만원당</span></td>
+												<td><span class="guide_tdtext"><strong>35</strong></span></td>
+											</tr>
+										</tbody>
+									</table>
+								</div>
+								<ul class="guide_indent_list">
+									<li>
+										<div class="guide_indent_item">
+											<span class="guide_indent_bullet">-</span>
+											<div class="guide_indent_liquid">상기 기준은 2024.7~8월 최우수 등급 Pilot 기간에 일시적으로 적용된 기준입니다.</div>
+										</div>
+									</li>
+									<li>
+										<div class="guide_indent_item">
+											<span class="guide_indent_bullet">-</span>
+											<div class="guide_indent_liquid">건수 및 기납입보험료는 납입중인 보험료에 한합니다.</div>
+										</div>
+									</li>
+									<li>
+										<div class="guide_indent_item">
+											<span class="guide_indent_bullet">-</span>
+											<div class="guide_indent_liquid">계약건수에 실효, 휴면, 해약, 무료(제휴)보험계약은 포함되지 않습니다.</div>
+										</div>
+									</li>
+									<li>
+										<div class="guide_indent_item">
+											<span class="guide_indent_bullet">-</span>
+											<div class="guide_indent_liquid">일시납 보험료는 월납보험료에는 포함되지 않습니다.</div>
+										</div>
+									</li>
+									<li>
+										<div class="guide_indent_item">
+											<span class="guide_indent_bullet">-</span>
+											<div class="guide_indent_liquid">기납입보험료에 납입면제 계약건은 전액 차감, 연금개시건은 연금지급액 차감 후 반영됩니다.</div>
+										</div>
+									</li>
+									<li>
+										<div class="guide_indent_item">
+											<span class="guide_indent_bullet">-</span>
+											<div class="guide_indent_liquid">추가납입보험료는 기납입 보험료에 포함되지 않습니다.</div>
+										</div>
+									</li>
+									<li>
+										<div class="guide_indent_item">
+											<span class="guide_indent_bullet">-</span>
+											<div class="guide_indent_liquid">관련 문의는 담당FC 또는 고객센터(1588-5580)로 문의 바랍니다.</div>
+										</div>
+									</li>
+									<li>
+										<div class="guide_indent_item">
+											<span class="guide_indent_bullet">-</span>
+											<div class="guide_indent_liquid">기준 및 서비스 내용은 당사 및 그룹사 사정에따라 예고없이 변경될 수 있습니다.</div>
+										</div>
+									</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</section>
 		@@include('./include/footer.html')
