--- a/src/notice.html
+++ b/src/notice.html
@@ -16,7 +16,48 @@
 				</div>
 			</div>
 			<div class="sc_zone">
-				내용이 들어갑니다.
+				<div class="guide_text_block_wrap">
+					<div class="guide_text_block">
+						<div class="guide_text_key">프리미엄 기프트 배송 일정 안내</div>
+						<div class="guide_text_contents">
+							<ul class="bullet_list dash">
+								<li>
+									<div class="bullet_inner_cont">
+										프리미엄 기프트는 신청 후 10일 내 발송됩니다.
+									</div>
+								</li>
+								<li>
+									<div class="bullet_inner_cont">
+										플레이트&한우, 미니 그릴&한우는 신청 후 5일 이내 해피콜이 진행되며 해피콜이 완료된 후 배송이 시작됩니다.<br>(※ 해피콜 미완료 시 배송되지 않습니다.)
+									</div>
+								</li>
+							</ul>
+						</div>
+					</div>
+					<div class="guide_text_block">
+						<div class="guide_text_key">프리미엄 기프트 신청 후 변경이 가능한가요?</div>
+						<div class="guide_text_contents">
+							<p class="guide_text_para">프리미엄 기프트는 신청한 다음날까지 취소가 가능합니다. (익일 자정까지)</p>
+						</div>
+					</div>
+					<div class="guide_text_block">
+						<div class="guide_text_key">프리미엄 기프트는 어떻게 신청하나요?</div>
+						<div class="guide_text_contents">
+							<ul class="bullet_list dash">
+								<li>
+									<div class="bullet_inner_cont">
+										www.solonvip.com 사이트에서 고객님이 직접 신청하실 수 있습니다.
+									</div>
+								</li>
+								<li>
+									<div class="bullet_inner_cont">
+										자세한 문의는 고객센터로 문의해주시기 바랍니다.<br>(이용 문의 : 담당 FC 또는 SOL ON 우수고객 서비스 전담센터 02.000.0000)
+									</div>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
 			</div>
 		</section>
 		@@include('./include/footer.html')
