--- a/src/history.html
+++ b/src/history.html
@@ -16,7 +16,103 @@
 				</div>
 			</div>
 			<div class="sc_zone">
-				내용이 들어갑니다.
+				<div class="data_render_brick_wrap">
+                    <div class="data_render_brick">
+                        <div class="title_row">
+                            <p class="data_render_title">고객정보</p>
+                        </div>
+                        <div class="contents_row">
+                            <div class="data_table_wrap">
+								<table class="data_table">
+									<tbody>
+                                        <tr>
+                                            <th><span class="data_thtext">고객명</span></th>
+                                            <td><span class="data_tdtext">김*한</span></td>
+                                        </tr>
+                                        <tr>
+                                            <th><span class="data_thtext">고객 <br class="mbr">전화번호</span></th>
+                                            <td><span class="data_tdtext">010-****-5678</span></td>
+                                        </tr>
+                                        <tr>
+                                            <th><span class="data_thtext">지점명</span></th>
+                                            <td><span class="data_tdtext">강남 지점</span></td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+							</div>
+                        </div>
+                    </div>
+                    <div class="data_render_brick">
+                        <div class="title_row">
+                            <p class="data_render_title">신청정보</p>
+                        </div>
+                        <div class="contents_row">
+                            <div class="data_table_wrap">
+								<table class="data_table">
+									<tbody>
+                                        <tr>
+                                            <th><span class="data_thtext">고객 등급</span></th>
+                                            <td><span class="data_tdtext">SS등급( Super Special )</span></td>
+                                        </tr>
+                                        <tr>
+                                            <th><span class="data_thtext">신청일자</span></th>
+                                            <td><span class="data_tdtext">2024.10.31 00:00:00</span></td>
+                                        </tr>
+                                        <tr>
+                                            <th><span class="data_thtext">상품명</span></th>
+                                            <td><span class="data_tdtext">[명품한우] 명품 한우세트 ‘암소NO.09’ & 발뮤다 플레이트 프로</span></td>
+                                        </tr>
+                                        <tr>
+                                            <th><span class="data_thtext">신청자</span></th>
+                                            <td><span class="data_tdtext">김신한(고객) / 김신한(FC)</span></td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+							</div>
+                        </div>
+                    </div>
+                    <div class="data_render_brick">
+                        <div class="title_row">
+                            <p class="data_render_title">배송정보</p>
+                        </div>
+                        <div class="contents_row">
+                            <div class="data_table_wrap">
+								<table class="data_table">
+									<tbody>
+                                        <tr>
+                                            <th><span class="data_thtext">받으시는분</span></th>
+                                            <td><span class="data_tdtext">김신한</span></td>
+                                        </tr>
+                                        <tr>
+                                            <th><span class="data_thtext">전화번호</span></th>
+                                            <td><span class="data_tdtext">010-1234-5678</span></td>
+                                        </tr>
+                                        <tr>
+                                            <th><span class="data_thtext">주소</span></th>
+                                            <td><span class="data_tdtext">06673 서울 서초구 서초대로 88 5층 어질리티코리아</span></td>
+                                        </tr>
+                                        <tr>
+                                            <th><span class="data_thtext">배송시 <br class="mbr">요청사항</span></th>
+                                            <td><span class="data_tdtext"></span></td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+							</div>
+                            <ul class="clause_list">
+								<li>
+									<div class="indent_item">
+										<span class="indent_bullet">*</span>
+										<div class="indent_liquid">선물 신청 취소는 신청일 다음날까지만 가능합니다</div>
+									</div>
+								</li>
+							</ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="btn_bottom_wrap">
+                    <a href="#" class="btn_submit_box"><span class="btn_submit_box_text">홈</span></a>
+                    <a href="#" class="btn_submit_box primary" id="btn_cancel"><span class="btn_submit_box_text">신청취소</span></a>
+                </div>
 			</div>
 		</section>
 		@@include('./include/footer.html')
@@ -54,8 +150,26 @@
                     }
                 });
             }
-        });
 
+            document.querySelector("#btn_cancel").addEventListener("click",(e)=>{
+                e.preventDefault();
+                designModal({
+                    message : "신청을 취소하시겠습니까?",
+                    modaltype : 'confirm',
+                    okText : '예',
+                    cancelText : '아니오',
+                    okcallback(){
+                        console.log('okcallback');
+                    },
+                    cancelcallback(){
+                        console.log('cancelcallback');
+                    }
+                });
+            });
+        });
+        window.addEventListener("load",()=>{
+            responMaxTable();
+        })
     </script>
 </body>
 
